// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WohnenExtraPage should render detailed offer if hash is supplied 1`] = `
<Translate(OfferDetail)
  offer={
    WohnenOfferModel {
      "_createdDate": "2018-07-24T00:00:00.000Z",
      "_email": "mail@mail.com",
      "_formData": WohnenFormData {
        "_accommodation": Object {
          "location": "Augsburg",
          "moveInDate": "2018-07-19T15:35:12.000Z",
          "ofRooms": Array [
            "kitchen",
            "child2",
            "child1",
            "bed",
          ],
          "ofRoomsDiff": Array [
            "bath",
            "wc",
            "child3",
            "livingroom",
            "hallway",
            "store",
            "basement",
            "balcony",
          ],
          "title": "Test Angebot",
          "totalArea": 120,
          "totalRooms": 4,
        },
        "_costs": Object {
          "additionalCosts": 200,
          "baseRent": 1000,
          "hotWaterInHeatingCosts": true,
          "ofAdditionalServices": Array [
            "garage",
          ],
          "ofAdditionalServicesDiff": Array [],
          "ofRunningServices": Array [
            "chimney",
            "other",
          ],
          "ofRunningServicesDiff": Array [
            "heating",
            "water",
            "garbage",
          ],
          "runningCosts": 1200,
        },
        "_landlord": Object {
          "firstName": "Max",
          "lastName": "Ammann",
          "phone": "",
        },
      },
    }
  }
/>
`;

exports[`WohnenExtraPage should render failure city does not support offer 1`] = `
<Translate(FailureSwitcher)
  error={[Error: The Wohnen extra is not supported.]}
/>
`;

exports[`WohnenExtraPage should render failure offer if offer is not found 1`] = `
<Translate(FailureSwitcher)
  error={[Error: Angebot nicht gefunden.]}
/>
`;

exports[`WohnenExtraPage should render list if no hash is supplied 1`] = `
<Fragment>
  <Caption
    title="Raumfrei"
  />
  <List
    items={
      Array [
        WohnenOfferModel {
          "_createdDate": "2018-07-24T00:00:00.000Z",
          "_email": "mail@mail.com",
          "_formData": WohnenFormData {
            "_accommodation": Object {
              "location": "Augsburg",
              "moveInDate": "2018-07-19T15:35:12.000Z",
              "ofRooms": Array [
                "kitchen",
                "child2",
                "child1",
                "bed",
              ],
              "ofRoomsDiff": Array [
                "bath",
                "wc",
                "child3",
                "livingroom",
                "hallway",
                "store",
                "basement",
                "balcony",
              ],
              "title": "Test Angebot",
              "totalArea": 120,
              "totalRooms": 4,
            },
            "_costs": Object {
              "additionalCosts": 200,
              "baseRent": 1000,
              "hotWaterInHeatingCosts": true,
              "ofAdditionalServices": Array [
                "garage",
              ],
              "ofAdditionalServicesDiff": Array [],
              "ofRunningServices": Array [
                "chimney",
                "other",
              ],
              "ofRunningServicesDiff": Array [
                "heating",
                "water",
                "garbage",
              ],
              "runningCosts": 1200,
            },
            "_landlord": Object {
              "firstName": "Max",
              "lastName": "Ammann",
              "phone": "",
            },
          },
        },
      ]
    }
    noItemsMessage="noOffersAvailable"
    renderItem={[Function]}
  />
</Fragment>
`;
